# BasicPlatformer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: Engine.cpp  Engine.h  Game.cpp  Game.h  RenderHelper.cpp  RenderHelper.h  TextureHelper.cpp  TextureHelper.h  TextureManager.cpp  TextureManager.h
core/collision/: Collision.cpp  Collision.h
core/ecs/: ComponentManager.cpp  ComponentManager.h  Constants.h  ECS.cpp  ECS.h  EntityHelper.cpp  EntityHelper.h  EntityManager.cpp  EntityManager.h  IComponentArray.cpp  IComponentArray.h  SystemManager.cpp  SystemManager.h  Types.h
core/ecs/components/: Component.h
core/ecs/systems/: AnimationSystem.cpp  AnimationSystem.h  AttackSystem.cpp  AttackSystem.h  CollisionSystem.cpp  CollisionSystem.h  ControlSystem.cpp  ControlSystem.h  DeathSystem.cpp  DeathSystem.h  EnemyAISystem.cpp  EnemyAISystem.h  FollowSystem.cpp  FollowSystem.h  HealthDisplaySystem.cpp  HealthDisplaySystem.h  LifetimeSystem.cpp  LifetimeSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  (+4 more)
core/entity/: Components.h  ECS.h
core/events/: EventController.cpp  EventController.h
core/headers/: Game.h
core/render/: RenderController.cpp  RenderController.h  Sprite.h
core/sources/: Game.cpp
core/tilemap/: RoomController.cpp  RoomController.h  Tile.cpp  Tile.h
core/utility/: Vector2D.h
core/visuals/: AnimationHelper.cpp  AnimationHelper.h
core/world/: WorldTimer.cpp  WorldTimer.h
includes/SDL2/: redme_please.txt
includes/SDL_Image/: redme_please.txt
rooms/: room0.txt  room1.txt
(+3 files in other folders)
